# fleet_management_api/controllers/order_state_controller.py
@@ -23,7 +23,7 @@ def create_order_state(order_state):  # noqa: E501
     return 'do some magic!'
 
 
-def get_all_order_states(wait=None, since=None, last_n=None):  # noqa: E501
+def get_all_order_states(wait=None, since=None, last_n=None, car_id=None):  # noqa: E501
     """Find Order States for all existing Orders.
 
      # noqa: E501
@@ -34,6 +34,8 @@ def get_all_order_states(wait=None, since=None, last_n=None):  # noqa: E501
     :type since: int
     :param last_n: If specified, only the last N objects will be returned. If unspecified, all objects are returned. \\ If some states have identical timestamps and they all do not fit into the maximum N states, only those with higher IDs are returned. If value smaller than 1 is provided, this filtering is ignored.
     :type last_n: int
+    :param car_id: An optional parameter for filtering only objects related to a car with the specified ID.
+    :type car_id: int
 
     :rtype: Union[List[OrderState], Tuple[List[OrderState], int], Tuple[List[OrderState], int, Dict[str, str]]
     """
